--- a/src/components/header/header.mod.scss
+++ b/src/components/header/header.mod.scss
@@ -4,12 +4,12 @@
   position: relative;
   display: flex;
   justify-content: center;
-  background-color: $white;
+  background-color: lavender;
   height: rem-calc(70);
 
   &__nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     height: 100%;
   }
@@ -28,7 +28,7 @@
     margin: 0;
     padding: 0;
     display: flex;
-    gap: rem-calc(32);
+    gap: rem-calc(100);
   }
 
   &__link {
