--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,16 +2,16 @@
 
 $primary-700: #4b8e47;
 $primary-600: #64be5f;
-$primary-500: #7ded77;
+$primary-500: #5B0A5C;
 $primary-400: #97f192;
-$primary-300: #b1f4ad;
+$primary-300: #A28DD2;
 $primary-200: #cbf8c9;
 $primary-100: #e5fbe4;
 $primary-50: #f2fdf1;
 
 $grey-700: #344054;
 $grey-600: #475467;
-$grey-500: #667085;
+$grey-500: #A28DD2;
 $grey-400: #98a2b3;
 $grey-300: #d0d5dd;
 $grey-200: #eaecf0;
