--- a/src/components/button/button.mod.scss
+++ b/src/components/button/button.mod.scss
@@ -2,7 +2,7 @@
 
 .button {
   position: relative;
-  background-color: $primary-300;
+  background-color: $aqua-purple-300;
   padding: rem-calc(3);
   border-radius: rem-calc(200);
   text-decoration: none;
@@ -10,64 +10,37 @@
   font-size: rem-calc(20);
   font-weight: 500;
   line-height: normal;
-  // letter-spacing: 3px;
   transition: 0.1s;
-  // width: calc(100% - 2rem);
-  max-width: rem-calc(250);
+  max-width: fit-content;
   display: block;
 
-  @include breakpoint(small) {
-    // width: unset;
-    // max-width: unset;
-  }
-
   &:hover {
-    background-color: $primary-500;
+    background-color: $aqua-purple-500;
     transition: 0.1s;
   }
 
   &__inner {
-    padding: rem-calc(12);
+    color: $white;
+    padding: rem-calc(8) rem-calc(24);
     border: 1px solid $white;
     border-radius: rem-calc(200);
     display: flex;
     justify-content: center;
     text-align: center;
-
-    @include breakpoint(small) {
-      // padding: rem-calc(16) rem-calc(70);
-    }
   }
 
-  // &--light {
-  //   background-color: $white;
-  //   color: $primary;
-  //   transition: 0.1s;
-
-  //   &:hover {
-  //     background-color: $primary-100;
-  //     transition: 0.1s;
-  //   }
-
-  //   .button__inner {
-  //     border: 2px solid $primary;
-  //   }
-  // }
-
-  // &--disabled {
-  //   opacity: 0.5;
-  //   cursor: not-allowed;
-  // }
-
-  &--transparent{
+  &--transparent {
     background-color: transparent;
     color: $primary;
 
     &:hover {
-      background-color: pink;
+      background-color: transparent;
       transition: 0.1s;
       text-decoration: underline;
     }
+    .button__inner {
+      color: $primary-500;
+      padding: unset;
+    }
   }
-
 }
