--- a/src/components/icon/icon.mod.scss
+++ b/src/components/icon/icon.mod.scss
@@ -21,7 +21,7 @@
     justify-content: center;
     align-items: center;
     border-radius: rem-calc(10);
-    border: 1px solid $grey-200;
+    border: 1px solid $aqua-purple-300;
     background: #fff;
     box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
   }
@@ -34,7 +34,7 @@
     justify-content: center;
     align-items: center;
     border-radius: rem-calc(10);
-    border: 1px solid $grey-200;
+    border: 1px solid $aqua-purple-300;
     background: #fff;
   }
 
@@ -43,7 +43,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    background: $primary-100;
+    background: $primary-300;
     height: rem-calc(28);
     width: rem-calc(28);
 
@@ -58,13 +58,13 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    border: 8px solid $primary-50;
-    background: $primary-100;
+    border: 8px solid $primary-500;
+    background: $primary-300;
   }
 
   &--dark {
-    background-color: $primary-600;
-    border-color: $primary-600;
+    background-color: $primary-500;
+    border-color: $primary-500;
 
     svg {
       color: $white;
