--- a/src/components/layout/container/container.mod.scss
+++ b/src/components/layout/container/container.mod.scss
@@ -26,7 +26,7 @@
   }
 
   &--background-Light {
-    background-color: $grey-50;
+    background-color: $aqua-purple-50;
   }
 
   &--background-white {
