--- a/src/components/lead/lead.mod.scss
+++ b/src/components/lead/lead.mod.scss
@@ -27,20 +27,20 @@
     margin-bottom: rem-calc(18);
   }
 
-  // &__buttons {
-  //   width: 100%;
-  //   display: flex;
-  //   justify-content: center;
-  //   margin-top: rem-calc(32);
-  // }
+  &__text{
+    max-width: rem-calc(550);
+  }
 
-  // &--align-left {
-  //   .lead__content {
-  //     display: flex;
-  //     flex-direction: column;
-  //     text-align: left;
-  //     align-items: flex-start;
-  //     max-width: rem-calc(768);
-  //   }
-  // }
+  &__buttons {
+
+    display: flex;
+    gap: 2rem;
+    margin-bottom: 2rem;
+
+    @include breakpoint(medium) {
+      margin-bottom: rem-calc(35);
+    }
+
+  }
+
 }
