bring in new components and restructure index file

--- a/src/assets/scss/main.global.scss
+++ b/src/assets/scss/main.global.scss
@@ -9,5 +9,5 @@
 }
 
 body {
-  background-color: $body-background;
+  background: var(--gradient, linear-gradient(180deg, #F9C1ED 0%, #A38ED2 100%));
 }
