--- a/src/components/footer/footer.mod.scss
+++ b/src/components/footer/footer.mod.scss
@@ -2,7 +2,7 @@
 
 .footer {
   position: relative;
-  background-color: $primary-500;
+  background-color: $aqua-purple-500;
   padding: rem-calc(60) 0;
 
   @include breakpoint(small) {
