--- a/src/components/layout/container/container.mod.scss
+++ b/src/components/layout/container/container.mod.scss
@@ -34,6 +34,6 @@
   }
 
   &--background-Dark {
-    background-color: #344054;
+    // background: var(--gradient, linear-gradient(180deg, #F9C1ED 0%, #A38ED2 100%));
   }
 }
