--- a/src/components/section/section.mod.scss
+++ b/src/components/section/section.mod.scss
@@ -2,4 +2,13 @@
 
 .section {
     position: relative;
+    display: flex;
+    flex-direction: column;
+
+
+    @include breakpoint(small) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    
+    }
 }
