--- a/src/components/experience/experience.mod.scss
+++ b/src/components/experience/experience.mod.scss
@@ -4,27 +4,37 @@
   position: relative;
   border: 1px solid rgba(245, 245, 255, 0.10);
   background: var(--purple-800, #2E1835);
-max-width: rem-calc(690);
+  max-width: rem-calc(690);
 
   &__wrapper {
-    padding: 16px 24px 24px 24px;
+    padding: 1rem 1.5rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 
   }
 
-&__title{
-  font-size: rem-calc(24);
-  font-weight: 500;
-  color: $aqua-purple-50;
-}
+  &__title {
+    font-size: rem-calc(24);
+    font-weight: 500;
+    color: $aqua-purple-50;
+  }
 
-&__subtitle{
-  font-size: rem-calc(18);
-  opacity: 0.5;
-  color: $aqua-purple-50;
-}
+  &__subtitle {
+    font-size: rem-calc(18);
+    opacity: 0.5;
+    color: $aqua-purple-50;
+  }
+
+  &__tags {
+    color: $pink-300;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    font-weight: 500;
+    line-height: 140%;
+    letter-spacing: -0.5px;
+  }
 
 
 }
