bring in highight js and codeblock

--- a/src/assets/scss/main.global.scss
+++ b/src/assets/scss/main.global.scss
@@ -11,3 +11,7 @@
 body {
   background: var(--gradient, linear-gradient(180deg, #F9C1ED 0%, #A38ED2 100%));
 }
+
+.hljs {
+  background-color: #2E1835 !important;
+}
