--- a/src/components/tabs/tabs.mod.scss
+++ b/src/components/tabs/tabs.mod.scss
@@ -2,33 +2,30 @@
 
 .tabs {
   position: relative;
-  background-color: #2E1835; 
+  background-color: #2E1835;
   max-width: rem-calc(690);
-  
+
 
   :global(button.Mui-selected) {
-    color: white ;
+    color: $aqua-purple-50
   }
 
-:global(.MuiTabs-scrollButtons){
-  color: white;
-}
+  :global(.MuiTabs-scrollButtons) {
+    color: $aqua-purple-50;
+  }
 
   button {
-    color: $aqua-purple-50;   
-    // opacity: 0.5;
+    color: $aqua-purple-300;
     margin: 0.25rem 1rem;
     transition: 0.15s ease-in-out;
+
     &:hover {
-      color: $aqua-purple-300;
+      color: $aqua-purple-50;
     }
   }
 
   :global(span.MuiTabs-indicator) {
     background-color: $primary;
   }
-
-
-
 
 }
