--- a/src/components/hero/hero.mod.scss
+++ b/src/components/hero/hero.mod.scss
@@ -15,7 +15,7 @@
 
   &__cta{
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
   }
   
   &__buttons {
@@ -28,21 +28,32 @@
     }
   }
   .icon {
-    height: rem-calc(50);
-    width: rem-calc(50);
+    // height: rem-calc(50);
+    // width: rem-calc(50);
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 50rem;
-    box-shadow: 0px 3px 8px rgba($color:  $primary-300, $alpha: 0.4), inset 0px 2px 3px rgba($color: $aqua-purple-300, $alpha: 0.4);
+    // border-radius: 50rem;
+    // box-shadow: 0px 3px 8px rgba($color:  $primary-300, $alpha: 0.4), inset 0px 2px 3px rgba($color: $aqua-purple-300, $alpha: 0.4);
     transition: 0.15s ease-in;
 
     &:hover {
-      box-shadow: 0px 3px 8px rgba($color: $aqua-purple-300, $alpha: 0.4), inset 0px 2px 5px rgba($color: $primary-300, $alpha: 0.4);
+      // box-shadow: 0px 3px 8px rgba($color: $aqua-purple-300, $alpha: 0.4), inset 0px 2px 5px rgba($color: $primary-300, $alpha: 0.4);
 
       svg {
         transform: scale(0.95);
+        opacity: 0.8;
+
       }
     }
+  }
+  &__nav{
+    display: flex;
+    flex-direction: column;
+    padding-top: 2.5rem;
+    gap: 1rem;
+h3{
+  color: $primary;
+}
   }
 }
