add read more for experience and change mobile bp for component

--- a/src/components/layout/container/container.mod.scss
+++ b/src/components/layout/container/container.mod.scss
@@ -25,6 +25,10 @@
     padding: 0 2rem;
   }
 
+  &--double-gutters {
+    padding: 0 5rem;
+  }
+
   &--background-Light {
     background-color: $aqua-purple-50;
   }
