--- a/src/components/list/list.mod.scss
+++ b/src/components/list/list.mod.scss
@@ -2,19 +2,36 @@
 
 .list {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding-right: 2rem;
+
+  &__list {
+    display: flex;
+    flex-direction: row;
+    overflow-y: hidden;
+    overflow-x: auto;
+    gap: 0.5rem;
+    padding: 1rem 0;
+    white-space: nowrap;
+
+    @include breakpoint(small) {
+      display: flex;
+      flex-direction: column;
+      padding-right: 2rem;
+      justify-content: center;
+      align-items: normal;
+    }
+  }
 
   &__item {
-    // background: rgba(255, 0, 0, 0.102);
-    padding: 2rem;
-    height: max-content;
-    cursor: pointer;
-    border-bottom: 1px solid #FFC4F0;
-    background: rgba(255, 255, 255, 0.10);
     color: $primary-300;
+    cursor: pointer;
+    border-bottom: 1px solid #ffc4f0;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 1rem;
+
+    @include breakpoint(small) {
+      padding: 2rem;
+      height: max-content;
+    }
   }
 
   &--active {
@@ -22,7 +39,6 @@
       p {
         font-weight: bold;
         color: $primary-500;
-        font-size: rem-calc(20);
       }
     }
   }
@@ -38,6 +54,5 @@
       color: $primary-500;
       opacity: 0.8;
     }
-
   }
 }
