--- a/src/components/about-me/about-me.mod.scss
+++ b/src/components/about-me/about-me.mod.scss
@@ -2,19 +2,8 @@
 
 .about {
   position: relative;
+  padding-top: 2.5rem;
+  
 
-&__intro{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
 
-&__divider{
-  position: absolute;
-  top: 8rem;
-  left: 1.5rem;
-  bottom: 0;
-  width: 2px;
-  height: rem-calc(500);
-  background: var(--gradient, linear-gradient(180deg, #F9C1ED 0%, #A38ED2 100%));
-}
 }
