change gutters on bp

--- a/src/components/layout/container/container.mod.scss
+++ b/src/components/layout/container/container.mod.scss
@@ -23,6 +23,9 @@
 
   &--gutters {
     padding: 0 2rem;
+    @include breakpoint(small) {
+      padding: 0 5rem;
+    }
   }
 
   &--double-gutters {
