--- a/src/components/lead/lead.mod.scss
+++ b/src/components/lead/lead.mod.scss
@@ -14,7 +14,7 @@
     margin-bottom: rem-calc(32);
 
     img {
-      border-radius: 10000px;
+      border-radius: 50%;
       border: 1px solid rgba(91, 10, 92, 0.30);
       opacity: 0.1;
       background: #5B0A5C;
@@ -25,7 +25,7 @@
       @include breakpoint(small) {
         max-height: rem-calc(150);
         max-width: rem-calc(150);
-
+        border-radius: 50%;
       }
     }
   }
