tweak image params

--- a/src/components/lead/lead.mod.scss
+++ b/src/components/lead/lead.mod.scss
@@ -19,14 +19,8 @@
       opacity: 0.1;
       background: #5B0A5C;
       mix-blend-mode: multiply;
-      max-height: rem-calc(100);
-      max-width: rem-calc(100);
-
-      @include breakpoint(small) {
-        max-height: rem-calc(150);
-        max-width: rem-calc(150);
-        border-radius: 50%;
-      }
+      height: rem-calc(150);
+      width: rem-calc(150);
     }
   }
 
