add css to main global

--- a/src/assets/scss/main.global.scss
+++ b/src/assets/scss/main.global.scss
@@ -20,3 +20,8 @@ body {
 span.language-xml{
   line-height: 20px;
 }
+
+.gatsby-image-wrapper{
+  max-height: rem-calc(150);
+  max-width: rem-calc(150);
+}
