remove blurb and bring in ternary for code block

--- a/src/components/codeblock/codeblock.mod.scss
+++ b/src/components/codeblock/codeblock.mod.scss
@@ -1,5 +1,9 @@
 @import 'helpers';
 
 .codeblock {
-    position: relative;
+  position: relative;
+
+  &__text {
+    padding: 1rem 1.5rem;
+  }
 }
