--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,15 +1,15 @@
 // ----- COLOURS ----- //
 
-$primary-800: rgba(46, 24, 53, 1);
-$primary-500:  rgba(91, 10, 92, 1);
-$primary-300:  rgba(71, 50, 78, 1);
+$primary-800: #2e1835;
+$primary-500:  #5b0a5c;
+$primary-300:  #47324e;
 
-$pink-400: rgba(229, 181, 231, 1);
-$pink-300: rgba(249, 193, 237, 1);
+$pink-400: #e5b5e7;
+$pink-300: #f9c1ed;
 
-$aqua-purple-500: rgba(98, 83, 192, 1);
-$aqua-purple-300: rgba(162, 141, 210, 1);
-$aqua-purple-50: rgba(255, 255, 255, 1);
+$aqua-purple-500: #6253c0;
+$aqua-purple-300: #a28dd2;
+$aqua-purple-50: #ffffff;
 
 $primary: $primary-500;
 $secondary: $aqua-purple-500;
