--- a/src/components/list/list.mod.scss
+++ b/src/components/list/list.mod.scss
@@ -12,7 +12,7 @@
     gap: 0.5rem;
     padding: 1rem 0;
 
-    @include breakpoint(small) {
+    @include breakpoint(medium) {
       display: flex;
       flex-direction: column;
       padding-right: 2rem;
