--- a/src/components/layout/container/container.mod.scss
+++ b/src/components/layout/container/container.mod.scss
@@ -23,7 +23,7 @@
 
   &--gutters {
     padding: 0 2rem;
-    @include breakpoint(small) {
+    @include breakpoint(medium) {
       padding: 0 5rem;
     }
   }
