fix list item padding

--- a/src/components/list/list.mod.scss
+++ b/src/components/list/list.mod.scss
@@ -10,14 +10,14 @@
     overflow-x: auto;
     white-space: nowrap;
     gap: 0.5rem;
-    padding: 1rem 0;
-
+    padding: 2.5rem 0 2.5rem 0;
+    
     @include breakpoint(medium) {
       display: flex;
       flex-direction: column;
-      padding-right: 2rem;
       justify-content: center;
       align-items: normal;
+      padding: 3.5rem 3.5rem 0 0;
     }
   }
 
@@ -25,17 +25,14 @@
     color: $primary-300;
     cursor: pointer;
     border-bottom: 1px solid #ffc4f0;
-    background: rgba(255, 255, 255, 0.1);
-    padding: 1rem;
-
-    @include breakpoint(small) {
-      padding: 2rem;
-      height: max-content;
-    }
+    padding: 1rem 1rem 0 1rem;
   }
 
   &--active {
     .list__item {
+      border-bottom: 1px solid #FFC4F0;
+      background: rgba(255, 255, 255, 0.10);
+
       p {
         font-weight: bold;
         color: $primary-500;
