change video to gatsby img

--- a/src/assets/scss/main.global.scss
+++ b/src/assets/scss/main.global.scss
@@ -22,6 +22,6 @@ span.language-xml{
 }
 
 .gatsby-image-wrapper{
-  max-height: rem-calc(150);
-  max-width: rem-calc(150);
+  // max-height: rem-calc(150);
+  // max-width: rem-calc(150);
 }
