--- a/src/components/section/section.mod.scss
+++ b/src/components/section/section.mod.scss
@@ -4,15 +4,12 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  padding-top: 2.5rem;
-  padding-bottom: 1.5rem;
+  padding: 2.5rem 0;
 
 
   @include breakpoint(medium) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-
+    padding: 6rem 0;
   }
 }
